--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><html class="no-js" lang="zxx" dir="ltr"><head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Realar - Real Estate Apartment Complex HTML Template - Luxury Duplex </title>
-    <meta name="author" content="Realar">
-    <meta name="description" content="Realar - Real Estate Apartment Complex HTML Template">
-    <meta name="keywords" content="Realar - Real Estate Apartment Complex HTML Template">
+    <title>Faruk Öner - Real Estate Apartment Complex HTML Template - Luxury Duplex </title>
+    <meta name="author" content="Faruk Öner">
+    <meta name="description" content="Faruk Öner - Real Estate Apartment Complex HTML Template">
+    <meta name="keywords" content="Faruk Öner - Real Estate Apartment Complex HTML Template">
     <meta name="robots" content="INDEX,FOLLOW">
 
     <!-- Mobile Specific Metas -->
@@ -77,17 +77,29 @@
         <div id="preloader" class="preloader-inner">
             <img src="images/logo.svg" alt="img">
             <div class="txt-loading">
-                <span data-text-preloader="R" class="letters-loading">
-                    R </span>
-                <span data-text-preloader="E" class="letters-loading">
-                    E </span>
-                <span data-text-preloader="A" class="letters-loading">
-                    A </span>
-                <span data-text-preloader="L" class="letters-loading">
-                    L
+                <span data-text-preloader="F" class="letters-loading">
+                    F 
                 </span>
                 <span data-text-preloader="A" class="letters-loading">
-                    A
+                    A 
+                </span>
+                <span data-text-preloader="R" class="letters-loading">
+                    R 
+                </span>
+                <span data-text-preloader="U" class="letters-loading">
+                    U
+                </span>
+                <span data-text-preloader="K" class="letters-loading">
+                    K
+                </span>
+                <span data-text-preloader="Ö" class="letters-loading">
+                    Ö
+                </span>
+                <span data-text-preloader="N" class="letters-loading">
+                    N
+                </span>
+                <span data-text-preloader="E" class="letters-loading">
+                    E
                 </span>
                 <span data-text-preloader="R" class="letters-loading">
                     R
@@ -102,7 +114,7 @@
             <button class="th-menu-toggle"><i class="fal fa-times"></i></button>
             <div class="mobile-logo">
                 <a href="/">
-                    <img src="images/logo-white.svg" alt="Realar">
+                    <img src="images/logo-white.svg" alt="Faruk Öner">
                 </a>
             </div>
             <div class="th-mobile-menu">
@@ -145,7 +157,7 @@
             <div class="widget  ">
                 <div class="th-widget-about">
                     <div class="about-logo">
-                        <a href="#hero"><img src="images/logo.svg" alt="Realar"></a>
+                        <a href="#hero"><img src="images/logo.svg" alt="Faruk Öner"></a>
                     </div>
                     <p class="about-text"> Rapidiously myocardinate cross-platform intellectual capital model. Appropriately create interactive infrastructures</p>
                 </div>
@@ -174,8 +186,8 @@
                             <img src="images/envelope.svg" alt="img">
                         </div>
                         <div class="details">
-                            <p><a href="mailto:mailinfo00@realar.com" class="info-box_link">mailinfo00@realar.com</a></p>
-                            <p><a href="mailto:support24@realar.com" class="info-box_link">support24@realar.com</a></p>
+                            <p><a href="mailto:mailinfo00@Faruk Öner.com" class="info-box_link">mailinfo00@Faruk Öner.com</a></p>
+                            <p><a href="mailto:support24@Faruk Öner.com" class="info-box_link">support24@Faruk Öner.com</a></p>
                         </div>
                     </div>
                 </div>
@@ -209,7 +221,7 @@
                         <div class="col-auto">
                             <div class="header-logo">
                                 <a href="#hero">
-                                    <img src="images/logo-white.svg" alt="Realar">
+                                    <img src="images/logo-white.svg" alt="Faruk Öner">
                                 </a>
                             </div>
                         </div>
@@ -280,7 +292,7 @@ Hero Area
                 <div class="swiper-slide">
                     <div class="hero-inner" data-mask-src="images/hero_1_bg_mask.png">
                         <div class="th-hero-bg" data-bg-src="images/hero_bg_1_1.jpg"></div>
-                        <div class="hero-big-text">REALAR</div>
+                        <div class="hero-big-text">Faruk Öner</div>
                         <div class="container">
                             <div class="row align-items-center">
                                 <div class="col-lg-8">
@@ -309,7 +321,7 @@ Hero Area
                 <div class="swiper-slide">
                     <div class="hero-inner" data-mask-src="images/hero_1_bg_mask.png">
                         <div class="th-hero-bg" data-bg-src="images/hero_bg_1_2.jpg"></div>
-                        <div class="hero-big-text">REALAR</div>
+                        <div class="hero-big-text">Faruk Öner</div>
                         <div class="container">
                             <div class="row align-items-center">
                                 <div class="col-lg-8">
@@ -338,7 +350,7 @@ Hero Area
                 <div class="swiper-slide">
                     <div class="hero-inner" data-mask-src="images/hero_1_bg_mask.png">
                         <div class="th-hero-bg" data-bg-src="images/hero_bg_1_3.jpg"></div>
-                        <div class="hero-big-text">REALAR</div>
+                        <div class="hero-big-text">Faruk Öner</div>
                         <div class="container">
                             <div class="row align-items-center">
                                 <div class="col-lg-8">
@@ -451,7 +463,7 @@ About Area
                     <div class="col-xl-3 text-xl-end">
                         <div class="about-tag">
                             <div class="about-experience-tag">
-                                <span class="circle-title-anime">Realar Agent <i class="fas fa-star"></i> Realar Living Solutions</span>
+                                <span class="circle-title-anime">Faruk Öner Agent <i class="fas fa-star"></i> Faruk Öner Living Solutions</span>
                             </div>
                             <div class="about-tag-thumb">
                                 <img src="images/about_1_3.png" alt="img">
@@ -542,7 +554,7 @@ Portfolio Area
                         <div class="project-title-wrap1">
                             <div class="title-area mb-40">
                                 <span class="shadow-title">PROJECTS</span>
-                                <h2 class="sec-title text-white">Discover Modern Living At Realar Residence.</h2>
+                                <h2 class="sec-title text-white">Discover Modern Living At Faruk Öner Residence.</h2>
                                 <p class="sec-text text-white mt-15">Residence takes advantage of abundant sunlight by incorporating solar panels into its architecture.</p>
                             </div>
                             <div class="btn-wrap">
@@ -795,7 +807,7 @@ Property Area
                 <div class="col-xl-6 col-lg-8">
                     <div class="title-area text-center">
                         <span class="shadow-title style2">Facilities</span>
-                        <h2 class="sec-title">Realar Aminities</h2>
+                        <h2 class="sec-title">Faruk Öner Aminities</h2>
                         <p class="sec-text text-title">We are a real estate firm with over 20 years of expertise, and our main goal is to provide amazing locations to our partners and clients.</p>
                     </div>
                 </div>
@@ -1002,7 +1014,7 @@ Video Area
                             </div>
                             <div class="media-body">
                                 <h5 class="author-profile-name"> Basila Smith </h5>
-                                <p class="author-desig">CEO of Realar</p>
+                                <p class="author-desig">CEO of Faruk Öner</p>
                             </div>
                         </div>
                         <div class="author-sign">
@@ -1560,7 +1572,7 @@ Blog Area
                             <div class="widget footer-widget">
                                 <div class="th-widget-about">
                                     <div class="about-logo">
-                                        <a href="#hero"><img src="images/logo.svg" alt="Realar"></a>
+                                        <a href="#hero"><img src="images/logo.svg" alt="Faruk Öner"></a>
                                     </div>
                                     <p class="about-text">Rapidiously myocardinate cross-platform intellectual capital model. Appropriately create interactive infrastructures</p>
                                     <div class="th-social style3">
@@ -1598,8 +1610,8 @@ Blog Area
                                             <img src="images/envelope.svg" alt="img">
                                         </div>
                                         <div class="details">
-                                            <p><a href="mailto:mailinfo00@realar.com" class="info-box_link">mailinfo00@realar.com</a></p>
-                                            <p><a href="mailto:support24@realar.com" class="info-box_link">support24@realar.com</a></p>
+                                            <p><a href="mailto:mailinfo00@Faruk Öner.com" class="info-box_link">mailinfo00@Faruk Öner.com</a></p>
+                                            <p><a href="mailto:support24@Faruk Öner.com" class="info-box_link">support24@Faruk Öner.com</a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -1651,7 +1663,7 @@ Blog Area
                     <div class="row gy-2 align-items-center">
                         <div class="col-lg-6">
                             <p class="copyright-text">
-                                Copyright <i class="fal fa-copyright"></i> 2025 <a href="#hero">Realar</a>, All rights reserved.</p>
+                                Copyright <i class="fal fa-copyright"></i> 2025 <a href="#hero">Faruk Öner</a>, All rights reserved.</p>
                         </div>
                         <div class="col-lg-6 text-center text-lg-end">
                             <div class="footer-links">
